syntax = "proto3";

package tieba.pbPage;

option java_package = "com.huanchengfly.tieba.post.api.models.protos.pbPage";

message PbSortType {
  int32 sort_type = 1;
  string sort_name = 2;
}
