syntax = "proto3";

package tieba;

option java_package = "com.huanchengfly.tieba.post.api.models.protos";

message SimpleForum {
  int64 id = 1;
  string name = 2;
  string avatar = 4;
  int32 memberNum = 12;
  int32 postNum = 13;
}